# molwatch

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  siesta_parser.py  test_parser.py
docs/: architecture.md
docs/spec/: README.md  api.md  cli.md  parsers.md  ui.md
molwatch/: __init__.py  web.py
molwatch/cli/: __init__.py  _base.py  inspect.py  parse.py  serve.py  tail.py
molwatch/parsers/: _result.py  molwatch_log.py
molwatch/static/: viewer.js
molwatch/templates/: index.html
parsers/: __init__.py  base.py  molwatch_log.py  pyscf.py  siesta.py
static/: style.css  viewer.js
templates/: index.html
tests/: conftest.py  test_api_load.py  test_app_concurrency.py  test_assembler.py  test_cli.py  test_cross_parser.py  test_molwatch_log_parser.py  test_pyscf_parser.py  test_registry.py  test_schema_conformance.py  test_siesta_parser.py
